<resources>
    <string name="app_name">GitUser</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_label">Search</string>
    <string name="image_view_user">Image View User</string>
    <string name="image_view_github">Image View Github</string>
    <string name="icon_back">Icon Back</string>
    <string name="icon_share">Icon Share</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="icon_search">Icon Search</string>
    <string name="unavailable">Unavailable</string>
    <string name="github_url">github.com/%s</string>
    <string name="share_text">Recommend %s to your friends :)</string>
    <string name="icon_favorite">Icon Favorite</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="change_theme">Change Theme to %s</string>
    <string name="favorite_is_empty">Favorite is Empty</string>
</resources>